--- a/telemeta/htdocs/css/telemeta_ie.css
+++ b/telemeta/htdocs/css/telemeta_ie.css
@@ -1,5 +1,4 @@
 dl.listing {
-    clear: both;
     margin-top: .4em;
 }
 dl.listing dd {
